# lecture-12

./: .env  README.md  pyproject.toml  requirements.txt
src/crews_agents_tasks/: __init__.py  main.py
src/crews_agents_tasks/crews/teaching_crew/: teaching_crew.py
src/crews_agents_tasks/crews/teaching_crew/config/: agents.yaml  tasks.yaml
